# AI-Generated-Text-Detector

./: .gitignore  pyproject.toml
datasets/: english_data.py  indo_data.py  merge_data.py  pipeline_m4_multilingual.py
src/: evaluate.py  model.ipynb  train.py
